--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -3,75 +3,269 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4f91245-c246-46b9-b413-15091647a789",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from api import NFL, CLEAN\n",
-    "import pyodbc\n",
-    "import os\n",
-    "import urllib\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy.engine import URL\n",
-    "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_rows\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", 100)\n",
-    "\n",
-    "sql_server = \"192.168.1.17\\SQLEXPRESS\"\n",
-    "database = \"FantasySidelines\"\n",
-    "sql_username = os.getenv(\"sql_username\")\n",
-    "sql_password = os.getenv(\"sql_password\")\n",
-    "\n",
-    "connection_string = (r\"DRIVER=ODBC Driver 17 for SQL Server;\"\n",
-    "                     +fr\"SERVER={sql_server};\"\n",
-    "                     +fr\"Database={database};\"\n",
-    "                     +fr\"UID={sql_username};\"\n",
-    "                     +fr\"PWD={sql_password};\")\n",
-    "\n",
-    "cxn = pyodbc.connect(connection_string)\n",
-    "\n",
-    "connection_url = URL.create(\"mssql+pyodbc\", \n",
-    "                            query={\"odbc_connect\": connection_string})\n",
-    "engine = create_engine(connection_url)\n",
-    "conn = engine.connect()\n",
-    "\n",
-    "api_key = [os.getenv(\"sportradar_apikey\"), os.getenv(\"sportradar_apikey2\"), os.getenv(\"sportradar_apikey3\")]\n",
-    "year = [2020, 2019, 2018, 2017, 2016, 2015]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cc388c2-acc2-4ff9-83e0-630033ad4a23",
+   "id": "b2528a6d-7b81-4ed6-a55d-938a6e5439db",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def get_season(api_key, year, access_level=\"trial\", version=\"v7\", language_code=\"en\", format_=\"json\", sleep_time=2, timeout=5):\n",
-    "    season = NFL(api_key, access_level=access_level, version=version, language_code=language_code, format_=format_, sleep_time=sleep_time, timeout=timeout)\n",
+    "# -*- coding: utf-8 -*-\n",
     "\n",
-    "    schedule_api = season.season_schedule(year)\n",
-    "    schedule = CLEAN().schedule_clean(schedule_api)\n",
-    "    game_id_list = list(schedule[\"game.id\"].unique())\n",
-    "    \n",
-    "    players_stats = pd.DataFrame()\n",
-    "    teams_stats = pd.DataFrame()\n",
+    "\"\"\"\n",
+    "{Description}\n",
     "\n",
-    "    for game_id in range(len(game_id_list)):\n",
-    "        statistics_api = season.game_statistics(game_id_list[game_id])\n",
-    "        \n",
-    "        players = CLEAN().player_stats_clean(statistics_api)\n",
-    "        teams = CLEAN().teams_stats_clean(statistics_api)\n",
-    "        \n",
-    "        players_stats = pd.concat([players, players_stats])\n",
-    "        teams_stats = pd.concat([teams, teams_stats])\n",
+    "MIT License\n",
     "\n",
-    "    return schedule, players_stats, teams_stats"
+    "Copyright (c) 2021, Fantasy-Sidelines\n",
+    "\n",
+    "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+    "of this software and associated documentation files (the \"Software\"), to deal\n",
+    "in the Software without restriction, including without limitation the rights\n",
+    "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+    "copies of the Software, and to permit persons to whom the Software is\n",
+    "furnished to do so, subject to the following conditions:\n",
+    "\n",
+    "The above copyright notice and this permission notice shall be included in all\n",
+    "copies or substantial portions of the Software.\n",
+    "\n",
+    "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY +OF ANY KIND, EXPRESS OR\n",
+    "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+    "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+    "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+    "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+    "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+    "SOFTWARE.\n",
+    "\n",
+    "Sportradar API details and documentation: https://developer.sportradar.com/docs\n",
+    "MySportsFeeds API details and documentation: https://www.mysportsfeeds.com/data-feeds/api-docs/\n",
+    "www.pro-football-reference.come and documentation: https://www.sports-reference.com/termsofuse.html\n",
+    "\"\"\"\n",
+    "\n",
+    "import pyodbc\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from gspread_pandas import Spread\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import inspect\n",
+    "from sqlalchemy.engine import URL\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "__author__ = \"Tim Cuddeback\"\n",
+    "__copyright__ = \"Copyright (c) 2021, Fantasy-Sidelines\"\n",
+    "__credits__ = [\"Tim Cuddeback\", \"Sportradar API\", \"Fantasy Sharks\", \"MySportsFeeds API\"]\n",
+    "__license__ = \"MIT License\"\n",
+    "__version__ = \"1.1.0\"\n",
+    "__maintainer__ = \"Tim Cuddeback\"\n",
+    "__email__ = \"cuddebtj@gmail.com\"\n",
+    "__status__ = \"Dev\"\n",
+    "\n",
+    "from sql_upload import *"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f79b9bf6-1a89-4512-b0a8-8969d90a8f68",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "sql_driver = os.getenv(\"sql_driver\")\n",
+    "# check IP address for connection timeout errors\n",
+    "sql_server_16 = os.getenv(\"sql_server_16\")\n",
+    "sql_server_17 = os.getenv(\"sql_server_17\")\n",
+    "sql_database = os.getenv(\"sql_database\")\n",
+    "sql_username = os.getenv(\"sql_username\")\n",
+    "sql_password = os.getenv(\"sql_password\")\n",
+    "api_key = os.getenv(\"sportradar_apikey\")\n",
+    "\n",
+    "year = [2020, 2019, 2018, 2017, 2016, 2015]\n",
+    "\n",
+    "connection_string = (\"DRIVER=\"+sql_driver\n",
+    "                     +\";SERVER=\"+sql_server_16\n",
+    "                     +\";DATABASE=\"+sql_database\n",
+    "                     +\";UID=\"+sql_username\n",
+    "                     +\";PWD=\"+sql_password)\n",
+    "# cxn = pyodbc.connect(connection_string)\n",
+    "connection_url = URL.create(\"mssql+pyodbc\", \n",
+    "                            query={\"odbc_connect\": connection_string})\n",
+    "engine = create_engine(connection_url)\n",
+    "conn = engine.connect()\n",
+    "\n",
+    "inspector = inspect(engine)\n",
+    "print(inspector.get_table_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10c1bad5-5b8c-41f0-b1ce-3412fdef5ee9",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# schedule_stats_api_sql(api_key, year, engine)\n",
+    "# snaps(y1, y2, engine)\n",
+    "# injuries(y1, y2, engine)\n",
+    "# player_table(engine)\n",
+    "# game_table(engine)\n",
+    "# season_table(engine)\n",
+    "# week_table(engine)\n",
+    "# team_table(engine)\n",
+    "# venue_table(engine)\n",
+    "\n",
+    "# spread = Spread(\"PracticeParticipation\")\n",
+    "\n",
+    "# weeks = list(range(1,22))\n",
+    "# seasons = list(range(2016, 2022))\n",
+    "# teams_id = [\"Arizona Cardinals\", \"Atlanta Falcons\", \"Baltimore Ravens\", \"Buffalo Bills\", \n",
+    "#             \"Carolina Panthers\", \"Chicago Bears\", \"Cincinnati Bengals\", \"Cleveland Browns\", \n",
+    "#             \"Dallas Cowboys\", \"Denver Broncos\", \"Detroit Lions\", \"Green Bay Packers\", \n",
+    "#             \"Houston Texans\", \"Indianapolis Colts\", \"Jacksonville Jaguars\", \"Kansas City Chiefs\", \n",
+    "#             \"Los Angeles Rams\", \"San Diego Chargers\", \"Miami Dolphins\", \"Minnesota Vikings\", \"New England Patriots\", \n",
+    "#             \"New Orleans Saints\", \"New York Giants\", \"New York Jets\", \"Oakland Raiders\", \"Las Vegas Raiders\",\n",
+    "#             \"Philadelphia Eagles\", \"Pittsburgh Steelers\", \"Los Angeles Chargers\", \"San Francisco 49ers\", \n",
+    "#             \"Seattle Seahawks\", \"Tampa Bay Buccaneers\", \"Tennessee Titans\", \"Washington Redskins\", \"Washington Football Team\"]\n",
+    "\n",
+    "# practice_par_df = pd.DataFrame()\n",
+    "\n",
+    "# for season in seasons:\n",
+    "    \n",
+    "#     for week in weeks:\n",
+    "        \n",
+    "#         try:\n",
+    "#             sh = f\"{str(season)}w{str(week)}\"\n",
+    "#             sheet = spread.sheet_to_df(header_rows=None, sheet=sh)\n",
+    "#             sheet = sheet.reset_index()\n",
+    "\n",
+    "#             idx = [sheet[\"index\"][sheet[\"index\"] == d].index[0] for t in teams_id for d in sheet[\"index\"] if t in d]\n",
+    "#             idx.append(len(sheet[\"index\"]))\n",
+    "#             idx.sort()\n",
+    "\n",
+    "#             final_df = pd.DataFrame()\n",
+    "\n",
+    "#             for i in range(len(idx[:-1])):\n",
+    "                \n",
+    "#                 sheet.loc[idx[i]+2:idx[i+1]-1, \"team\"] = sheet[\"index\"].loc[idx[i]]\n",
+    "                \n",
+    "#                 team = sheet.loc[idx[i]+1:idx[i+1]-1]\n",
+    "                \n",
+    "#                 columns = team.iloc[0].values.tolist()\n",
+    "#                 columns = columns[:-1]\n",
+    "#                 columns[1] = \"injury\"\n",
+    "#                 columns.append(\"team\")\n",
+    "                \n",
+    "#                 team.columns = columns\n",
+    "#                 team = team[team[\"Player\"] != \"Player\"]\n",
+    "                \n",
+    "#                 final_df = pd.concat([final_df, team])\n",
+    "\n",
+    "#             final_df[\"season\"] = season\n",
+    "#             final_df[\"week\"] = week\n",
+    "            \n",
+    "#             cols = final_df.columns.tolist()\n",
+    "#             cols.remove(\"Player\")\n",
+    "#             cols.remove(\"injury\")\n",
+    "#             cols.remove(\"team\")\n",
+    "#             cols.remove(\"week\")\n",
+    "#             cols.remove(\"season\")\n",
+    "            \n",
+    "#             final_df = pd.melt(final_df, \n",
+    "#                                id_vars=[\"Player\", \"injury\", \"team\", \"season\", \"week\"], \n",
+    "#                                value_vars=cols, \n",
+    "#                                var_name=\"date\", \n",
+    "#                                value_name=\"status\", \n",
+    "#                                ignore_index=True)\n",
+    "            \n",
+    "#             final_df = final_df.dropna(subset=[\"status\"])\n",
+    "#             final_df[[\"player\", \"pos\"]] = final_df[\"Player\"].str.split(\", \", 1, expand=True)\n",
+    "#             final_df[[\"last.date\", \"status\", \"home.away\", \"opp\"]] = final_df[\"status\"].str.split(\" \", expand=True)\n",
+    "#             final_df = final_df.drop([\"Player\"], axis=1)\n",
+    "#             final_df[\"status\"] = final_df[\"status\"].fillna(value=final_df[\"last.date\"])\n",
+    "#             final_df.sort_values([\"team\", \"player\"], inplace=True)\n",
+    "#             final_df[\"home.away\"] = final_df.groupby(\"team\")[\"home.away\"].transform(lambda x: x.bfill().ffill())\n",
+    "#             final_df[\"opp\"] = final_df.groupby(\"team\")[\"opp\"].transform(lambda x: x.bfill().ffill())\n",
+    "#             final_df[[\"day.name.abr\", \"date\"]] = final_df[\"date\"].str.split(\" \", expand=True)\n",
+    "#             final_df[\"date\"] = final_df[\"date\"].replace(\"Status\", np.nan)\n",
+    "#             final_df = final_df[[\"player\", \"pos\", \"team\", \n",
+    "#                                  \"home.away\", \"opp\", \"season\", \n",
+    "#                                  \"week\", \"date\", \"status\", \n",
+    "#                                  \"injury\", \"day.name.abr\"]]\n",
+    "\n",
+    "#             spread.df_to_sheet(final_df, index=False, sheet=sh, replace=True)\n",
+    "#             practice_par_df = pd.concat([practice_par_df, sheet])\n",
+    "                \n",
+    "#         except Exception as e:\n",
+    "#             print(e)\n",
+    "#             print(sh)\n",
+    "#             break\n",
+    "            \n",
+    "# practice_par_df.to_sql(\"practiceParticipation\", engine, if_exists=\"append\", index=False, schema=\"dbo\", chunksize=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a85e1a44-0131-40c2-8ab6-5b7a635ebba3",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# start = \"1/1/2015\"\n",
+    "# end = \"12/31/2025\"\n",
+    "# calendar_df = pd.DataFrame(pd.date_range(start, end), columns=[\"date\"])\n",
+    "# calendar_df[\"day.number\"] = calendar_df[\"date\"].dt.day\n",
+    "# calendar_df[\"day.abr\"] = calendar_df[\"date\"].dt.strftime(\"%a\")\n",
+    "# calendar_df[\"day.name\"] = calendar_df[\"date\"].dt.strftime(\"%A\")\n",
+    "# calendar_df[\"month.number\"] = calendar_df[\"date\"].dt.month\n",
+    "# calendar_df[\"month.abr\"] = calendar_df[\"date\"].dt.strftime(\"%b\")\n",
+    "# calendar_df[\"month.name\"] = calendar_df[\"date\"].dt.strftime(\"%B\")\n",
+    "# calendar_df[\"year\"] = calendar_df[\"date\"].dt.year\n",
+    "# calendar_df[\"week.number\"] = calendar_df[\"date\"].dt.isocalendar().week\n",
+    "# calendar_df[\"day.year.number\"] = calendar_df[\"date\"].dt.dayofyear\n",
+    "# calendar_df\n",
+    "# calendar_df.to_sql(\"calendarIDTable\", engine, if_exists=\"replace\", index=False, schema=\"dbo\", chunksize=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59fe2ebc-1440-4130-a366-239c20241314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()\n",
+    "# cxn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d10deb92-b759-4f4f-8389-4a1cd54d98df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11215a34-4023-4efa-9b53-c8d7aa5cf197",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -81,17 +275,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "# schedule_2020, players_stats_2020, teams_stats_2020 = get_season(api_key[0], year[0])\n",
-    "# schedule_2019, players_stats_2019, teams_stats_2019 = get_season(api_key[0], year[1])\n",
-    "# schedule_2018, players_stats_2018, teams_stats_2018 = get_season(api_key[0], year[2])\n",
-    "# schedule_2017, players_stats_2017, teams_stats_2017 = get_season(api_key[2], year[3])\n",
-    "# schedule_2016, players_stats_2016, teams_stats_2016 = get_season(api_key[1], year[4])\n",
-    "# schedule_2015, players_stats_2015, teams_stats_2015 = get_season(api_key[1], year[5])\n",
-    "# schedule = pd.concat([schedule_2020, schedule_2019, schedule_2018, schedule_2017, schedule_2016, schedule_2015])\n",
-    "# players_stats = pd.concat([players_stats_2020, players_stats_2019, players_stats_2018, players_stats_2017, players_stats_2016, players_stats_2015])\n",
-    "# teams_stats = pd.concat([teams_stats_2020, teams_stats_2019, teams_stats_2018, teams_stats_2017, teams_stats_2016, teams_stats_2015])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -101,26 +285,6 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "schedule.to_sql(\"schedule\", engine, if_exists=\"append\", index=False, schema=\"dbo\" chunksize=500)\n",
-    "players_stats.to_sql(\"playerStats\", engine, if_exists=\"append\", index=False, schema=\"dbo\", chunksize=500)\n",
-    "teams_stats.to_sql(\"teamStats\", engine, if_exists=\"append\", index=False, schema=\"dbo\", chunksize=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fe2ed35-be8a-4d88-b23c-98621e3481ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5024dea9-ab08-4c46-8737-3a64fd89c9a2",
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -129,34 +293,7 @@
    "id": "cc55df30-edd6-4852-807d-11309a373927",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# import smtplib\n",
-    "# import time\n",
-    "\n",
-    "# email = os.getenv(\"notification_email\")\n",
-    "# email_password = os.getenv(\"notification_password\")\n",
-    "# error = \"\"\n",
-    "# try:\n",
-    "#     pass\n",
-    "# except Exception as _ex:\n",
-    "#     error = repr(_ex)\n",
-    "# to = \"cuddebtj@gmail.com\"    \n",
-    "# if error != \"\":\n",
-    "#     subject = \"Python Script Error\"\n",
-    "#     body = f\"Error raised: {error}\\nTime to error: {(end_time-start_time)/60}\"\n",
-    "# else:\n",
-    "#     subject = \"Python Script Complete\"\n",
-    "#     body = f\"Script complete without errors.\\nTime to error: {(end_time-start_time)/60}\"\n",
-    "# email_text = f\"From: {email}\" \\\n",
-    "#              f\"To: {to}\"\\\n",
-    "#              f\"Subject: {subject}\"\\\n",
-    "#              f\"{body}\"\n",
-    "# server = smtplib.SMTP_SSL(\"smtp.gmail.com\", 465)\n",
-    "# server. ehlo()\n",
-    "# server.login(email, email_password)\n",
-    "# server.sendmail(email, to, email_text)\n",
-    "# server.close()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
